name:                hangman
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/xiongchenyu6/hangman#readme
license:             BSD3
license-file:        LICENSE
author:              xiongchenyu6
maintainer:          xiongchenyu6@gmail.com
copyright:           2018 xiongchenyu6
category:            Game
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md,
                     data/dict.txt

executable hangman
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                      ,random
                      ,split
